# readora

./: .gitignore  .gitmodules  AGENTS.md  Changelog.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: android-build.yml  tauri-release.yml
apps/readora-app/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
apps/readora-app/src/: App.vue  i18n.js  main.js  style.css
apps/readora-app/src-tauri/: 2.0.0-rc  Cargo.toml  tauri.conf.json
apps/readora-app/src-tauri/capabilities/: default.json
apps/readora-app/src-tauri/icons/: icon.icns
apps/readora-app/src-tauri/src/: database.rs  epub_metadata.rs  lib.rs  state.rs
apps/readora-app/src-tauri/src/commands/: data.rs  mod.rs  startup.rs  system.rs  theme.rs  update.rs
apps/readora-app/src-tauri/src/desktop/: mod.rs  tray.rs  window.rs
apps/readora-app/src-tauri/themes/: night.css  weread-dark.css  weread.css
apps/readora-app/src/assets/css/: reset.css
apps/readora-app/src/assets/svg/: AIcon.vue  AddIcon.vue  AnalysisIcon.vue  BookshelfIcon.vue  ChevronRightIcon.vue  CloseIcon.vue  CopyIcon.vue  DoubleColumnIcon.vue  FolderIcon.vue  GitHubIcon.vue  HomeIcon.vue  MarkerIcon.vue  NextChapter.vue  (+10 more)
apps/readora-app/src/components/: AnnotationPopup.vue  AnnotationToolbar.vue  BookCard.vue  EpubToc.vue  Sidebar.vue  TocItem.vue  UpdateNotifier.vue  tocItemUtils.js
apps/readora-app/src/composables/: useViewport.js
apps/readora-app/src/entities/: models.js
apps/readora-app/src/epub/: test.css
apps/readora-app/src/router/: index.js
apps/readora-app/src/services/: aiSettingsService.js  appService.js  appShellService.js  bookmarkRepository.js  dataMigrationService.js  libraryRepository.js  llmSummaryService.js  localStore.js  loggingService.js  markdownRenderer.js  navigationService.js  noteRepository.js  pluginRegistry.js  pluginService.js  pomodoroPluginService.js  readerRepository.js  readerSettingsService.js  settingsRepository.js  shortcutService.js  syncSchedulerService.js  syncService.js  syncStatusService.js  themeService.js  updateService.js  webdavClient.js  webdavService.js  windowService.js
apps/readora-app/src/theme/: naiveTheme.js
apps/readora-app/src/utils/: walk.js
apps/readora-app/src/views/: Analysis.vue  Bookshelf.vue  EpubViewer.vue  Home.vue  NotFound.vue  Note.vue
docs/: plugins.md
scripts/: extract-release-notes.mjs
(+37 files in other folders)
