[package]
name = "readora"
version = "0.1.0"
description = "A epub reader"
authors = ["Aspirin"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
# 添加devtools以后，编译过的程序，右键也可以看到控制台，否则看不到控制台
tauri = { version = "2.0.0-rc.17", features = [ "protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
